# devops_tests

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt  test_build_requirements.py  test_notebooks.py  test_run_notebooks.py  test_tests_for_notebooks.py  test_todos_annotated.py  utils.py
.github/workflows/: checks.yml
devops_tests/: test_notebooks.py  utils.py
devops_tests/hooks/: check_badges.py
devops_tests/pre_commit_hooks/: check_badges.py  check_notebooks.py
examples/: pyproject.toml
hooks/: check_badges.py  check_notebooks.py  utils.py
pre_commit_hooks/: check_badges.py  check_notebooks.py  utils.py
test_files/: empty.ipynb  template.ipynb  template2.ipynb
