[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['devops_tests']

[project]
name = "devops_tests"
dependencies = [
    "pytest",
    "ghapi",
    "gitpython",
    "binaryornot",
    "nbconvert",
    "nbformat",
    "jsonschema",
    "jupyter-client>=8.0.2",
    "ipython",
    "ipykernel",
]
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "https://github.com/open-atmos/devops_tests/graphs/contributors", email = "sylwester.arabas@agh.edu.pl"}
]
dynamic = ['version']

[project.scripts]
check_notebooks = "devops_tests.hooks.check_notebooks:main"
check_badges = "devops_tests.hooks.check_badges:main"
